<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="app_name">Wallpaper Carousel</string>
    <string name="apply">Apply</string>
    <string name="apply_success">Applied successfully</string>
    <string name="at_least_one">Select at least 1 category</string>
    <string name="auto_interval">Auto</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_international">Cancel</string>
    <string name="change_time">Switch wallpapers</string>
    <string name="day">Once a day</string>
    <string name="declaration">Get fresh wallpapers delivered directly to your Lock screen daily with Wallpaper Carousel.</string>
    <string name="declaration_lockscreen_title">Wallpaper Carousel</string>
    <string name="declaration_title">Terms and Conditions</string>
    <string name="dislike">Delete</string>
    <string name="drop_down_notify_text">Release to view more</string>
    <string name="from_migallerylockscreen">From MIUI Wallpaper Carousel</string>
    <string name="go_setting">Go to Settings</string>
    <string name="hour_1">Every hour</string>
    <string name="hour_3">Every 3 hours</string>
    <string name="like">Add to favorites</string>
    <string name="liked">Added to favorites</string>
    <string name="lockscreen_magazine_summary">Categories</string>
    <string name="lockscreen_magazine_system_title">Offline</string>
    <string name="lockscreen_magazine_title">Wallpaper Carousel</string>
    <string name="lockscreen_wallpaper_changed">Lock screen wallpaper was updated</string>
    <string name="minutes_15">Every 15 minutes</string>
    <string name="no_long_show">"Don't show again"</string>
    <string name="ok_international">Agree</string>
    <string name="ok_lockscreen">Turn on</string>
    <string name="ok_network">Agree</string>
    <string name="request_operation_storage_permission_desc">Go to Settings and allow Wallpaper Carousel to access storage in order to be able to add wallpapers to favorites.</string>
    <string name="request_permission">Permissions required</string>
    <string name="request_setting_allow_storage_permission_desc">Go to Settings and allow Wallpaper Carousel to access storage in order to be able to add wallpapers to favorites.</string>
    <string name="resource_apply">Apply</string>
    <string name="resource_no_network_text">"Couldn't connect to the network"</string>
    <string name="setting_favor_desc">View your favorite wallpapers</string>
    <string name="setting_favor_title">Favorites</string>
    <string name="setting_grid_view_select_all">Select all</string>
    <string name="setting_grid_view_unselect_all">Deselect all</string>
    <string name="setting_head">Settings</string>
    <string name="setting_no_favor_wallpaper_hint">No favorite wallpapers</string>
    <string name="setting_prov_enable_desc">Get new wallpapers delivered to your Lock screen regularly</string>
    <string name="setting_prov_enable_title">Turn on Wallpaper Carousel</string>
    <string name="setting_require_one_category_hint">Select at least 1 category</string>
    <string name="setting_sti_desc">Set wallpaper update frequency</string>
    <string name="setting_sti_title">Update frequency</string>
    <string name="setting_subscribe_title">Subscriptions</string>
    <string name="setting_wifi_only_desc">Turn this feature off to save mobile data</string>
    <string name="setting_wifi_only_title">Update wallpapers using mobile data</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="summary">"By using Wallpaper Carousel, you're agreeing to our &lt;a href ='http://www.miui.com/res/doc/eula.html?lang=en_US'>User Agreement&lt;/a> and &lt;a href='http://www.miui.com/res/doc/privacy/en.html'>Privacy Policy&lt;/a>. Wallpaper Carousel needs to connect to the internet to work normally."</string>
    <string name="summary_international">"By using Wallpaper Carousel, you're agreeing to our &lt;a href ='http://www.miui.com/res/doc/eula.html?lang=en_US'>User Agreement&lt;/a> and &lt;a href='http://www.miui.com/res/doc/privacy/en.html'>Privacy Policy&lt;/a>. Wallpaper Carousel needs to connect to the internet to work normally.​"</string>
    <string name="theme_apply_failured">"Couldn't apply, try again later"</string>
    <string name="theme_apply_success">Lock screen applied</string>
    <string name="theme_applying">Applying…</string>
    <string name="wlan_download">Update over Wi-Fi only</string>
    <string name="wlan_download_cn">Update over Wi-Fi only</string>
    <string name="default_web_client_id">431719575250-ok33gav5c28ruvfscc2hov21o5841vg2.apps.googleusercontent.com</string>
    <string name="firebase_database_url">https://mi-wallpaper-carousel.firebaseio.com</string>
    <string name="gcm_defaultSenderId">431719575250</string>
    <string name="google_api_key">AIzaSyB-GphRoymPhiIPP1zakiFnwQQBzP3CucE</string>
    <string name="google_app_id">1:431719575250:android:7ee2c4788bb4651d</string>
    <string name="google_crash_reporting_api_key">AIzaSyB-GphRoymPhiIPP1zakiFnwQQBzP3CucE</string>
    <string name="google_storage_bucket">mi-wallpaper-carousel.appspot.com</string>
    <string name="project_id">mi-wallpaper-carousel</string>
</resources>
