<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="26.699982dip" android:paddingRight="26.699982dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/declaration_lockscreen_title"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/title_text_size" android:textStyle="bold" android:gravity="center_horizontal" android:layout_gravity="center" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="25.299988dip" android:text="@string/declaration_title" />
    <TextView android:textSize="@dimen/secondary_text_size" android:id="@id/summary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.2999878dip" android:layout_marginTop="14.299988dip" android:layout_marginRight="3.2999878dip" android:text="@string/summary" />
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="25.299988dip" android:layout_marginBottom="28.699982dip">
        <Button android:textSize="@dimen/button_text_size" android:id="@id/cancel" android:layout_width="0.0dip" android:layout_height="45.0dip" android:text="@string/cancel_international" android:layout_weight="1.0" />
        <Button android:textSize="@dimen/button_text_size" android:id="@id/apply" android:layout_width="0.0dip" android:layout_height="45.0dip" android:text="@string/ok_international" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>