<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="26.699982dip" android:paddingRight="26.699982dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/title_text_size" android:textStyle="bold" android:gravity="center_horizontal" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="25.299988dip" android:layout_marginBottom="29.0dip" />
    <TextView android:textSize="@dimen/secondary_text_size" android:textColor="#ff7c7c7c" android:id="@id/declaration_content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.2999878dip" android:layout_marginRight="3.2999878dip" android:text="@string/declaration" android:lineSpacingExtra="4.0sp" />
    <TextView android:textSize="@dimen/secondary_text_size" android:textColor="#ff7c7c7c" android:id="@id/summary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.2999878dip" android:layout_marginTop="14.299988dip" android:layout_marginRight="3.2999878dip" android:text="@string/summary" />
    <Button android:textSize="@dimen/button_text_size" android:textColor="#ffffffff" android:id="@id/apply" android:background="@drawable/selector" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="34.0dip" android:layout_marginBottom="14.0dip" />
    <Button android:textSize="@dimen/button_text_size" android:id="@id/cancel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="24.0dip" android:text="@string/cancel" />
</LinearLayout>